# gpu-governor

./: AUTHORS  CMakeLists.txt  README.md
cmake/: cpm-fmtlib.cmake  cpm-spdlog.cmake
data/: amd-bc-250-gpu-governor.service.in
src/: governor.cpp  main.cpp  oberon.cpp
